Made changes in directory

--- a/front-end/manifest.json
+++ b/front-end/manifest.json
@@ -14,11 +14,9 @@
   "permissions": [
     "activeTab",
     "contextMenus",
-    "tabs",
-    "http://*/"
+    "tabs"
   ],
   "background": {
-    "scripts": ["noClick.js"]
-  },
-
+    "scripts": ["noClick.js", "LDA.js"]
+  }
 }
