--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 NoClick.pem
 *.pyc
+nltk_data
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
