--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,17 @@ jobs:
             - run: pip install awsebcli
             - checkout
             - run: echo "hello world"
-            - run: docker login -e "$DOCKER_EMAIL" -u "$DOCKER_ID" -p "$DOCKER_PASSWORD"
-            - run: ls -a
-            
+            - run:
+                name: Install Docker client
+          	command: |
+            	set -x
+            	VER="17.03.0-ce"
+            	curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            	tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            	mv /tmp/docker/* /usr/bin
+
+            - run: |
+                TAG=0.1.$CIRCLE_BUILD_NUM
+                docker build -t  sakshaat/noclick:$TAG .      # (3)
+                docker login -u $DOCKER_USER -p $DOCKER_PASS         # (4)
+                docker push CircleCI-Public/circleci-demo-docker:$TAG
