--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
 
             - run: |
                 TAG=0.1.$CIRCLE_BUILD_NUM
-                docker build -t  sakshaat/noclick:$TAG .      # (3)
-                docker login -u $DOCKER_USER -p $DOCKER_PASS         # (4)
-                docker push CircleCI-Public/circleci-demo-docker:$TAG
+                docker build -t  sakshaat/noclick:$TAG . 
+                docker login -u $DOCKER_ID -p $DOCKER_PASSWORD
+                ls -a
+                # docker push sakshaat/noclick:$TAG
