Moved cd into the run command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,9 @@
 version: 2
 jobs:
+    branches:
+        only:
+            - master
+            - circle
     build:
         working_directory: ~/noclick
         docker:
