--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
 version: 2
 jobs:
     build:
+        # Only want the build to run for specific branches
         branches:
             only:
                 - master
                 - circle
+                - test
         working_directory: ~/noclick
         docker:
             - image: python:3.6.0
@@ -12,6 +14,8 @@ jobs:
             - run: pip install awsebcli
             - checkout
             - setup_remote_docker
+
+            # Installing the Docker Client
             - run:
                 name: Install Docker client
                 command: |
@@ -20,10 +24,29 @@ jobs:
                     curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
                     tar -xz -C /tmp -f /tmp/docker-$VER.tgz
                     mv /tmp/docker/* /usr/bin
+
+            # Login, Build and Push
             - run: |
                 TAG=0.1.$CIRCLE_BUILD_NUM
                 cd back-end
                 docker build -t  sakshaat/noclick:$TAG . 
                 docker login -u $DOCKER_ID -p $DOCKER_PASSWORD
-                ls -a
-                # docker push sakshaat/noclick:$TAG
+                docker push sakshaat/noclick:$TAG
+
+            # Deploy Test
+            - deploy:
+                command: |
+                    if [ "${CIRCLE_BRANCH}" == "circle" ]; then 
+                        echo "TEST"
+                        eb init -r us-east-2 noclick 
+                        eb deploy -l $CIRCLE_BUILD_NUM 
+                    fi
+
+            # Deploy Production
+            - deploy:
+                command: |
+                    if [ "${CIRCLE_BRANCH}" == "master" ]; then
+                        eb init -r us-east-2 noclick 
+                        eb deploy -l $CIRCLE_BUILD_NUM 
+                    fi
+
