Trying to fix deployment issues

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
                 command: |
                     if [ "${CIRCLE_BRANCH}" == "circle" ]; then 
                         echo "TEST"
+                        eb init -r us-east-2 noclick -p Docker
                         eb deploy -l $CIRCLE_BUILD_NUM 
                     fi
 
@@ -45,7 +46,7 @@ jobs:
             - deploy:
                 command: |
                     if [ "${CIRCLE_BRANCH}" == "master" ]; then
-                        eb init -r us-east-2 noclick 
+                        eb init -r us-east-2 noclick -p Docker
                         eb deploy -l $CIRCLE_BUILD_NUM 
                     fi
 
