--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,14 +1,23 @@
 {
-  "manifest_version": 2,
-  "name": "NoClick",
-  "description": "This extension finds a TL;DR",
-  "version": "0.1",
-  "permissions": [
-    "activeTab",
-    "contextMenus",
-    "tabs"
-  ],
-  "background": {
-    "scripts": ["noClick.js"]
-  }
+    "manifest_version": 2,
+    "name": "NoClick",
+    "description": "This extension finds a TL;DR",
+    "version": "0.1",
+    "permissions": [
+        "activeTab",
+        "contextMenus",
+        "tabs",
+        "http://*/*",
+        "https://*/*"
+    ],
+    "background": {
+        "scripts": ["noClick.js"]
+    },
+    "content_scripts": [{
+        "matches": ["http://*/*", "https://*/*"],
+        "js": ["jquery.min.js", "jquery-ui-1.12.1/jquery-ui.min.js"],
+        "css": ["jquery-ui-1.12.1/jquery-ui.min.css"],
+        "run_at": "document_end"
+    }],
+    "web_accessible_resources": ["noclick-style-overwrite.css"]
 }
