--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,92 @@
-appdirs==1.4.3
+altgraph==0.10.2
+astroid==1.4.9
+backports.functools-lru-cache==1.3
+bdist-mpkg==0.5.0
+beautifulsoup4==4.5.1
+bonjour-py==0.3
 breadability==0.1.20
+bs4==0.0.1
 chardet==3.0.2
-click==6.7
-Cython==0.25.2
+configparser==3.5.0
+Django==1.10.6
 docopt==0.6.2
-Flask==0.12.1
+Flask==0.10.1
+fudge==1.1.0
+httplib2==0.9.2
+isort==4.2.5
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.8
+lazy-object-proxy==1.2.2
 lxml==3.7.3
-MarkupSafe==1.0
+macholib==1.5.1
+MarkupSafe==0.23
+matplotlib==1.3.1
+mccabe==0.6.1
+mod-wsgi==4.5.5
+modulegraph==0.10.4
+mysql-connector-python==2.0.4
+MySQL-python==1.2.4b4
+ndg-httpsclient==0.4.0
 nltk==3.2.2
-packaging==16.8
-pyparsing==2.2.0
-requests==2.13.0
+numpy==1.8.0rc1
+oauthlib==2.0.1
+pbr==3.0.0
+py2app==0.7.3
+pyasn1==0.1.8
+pylint==1.6.5
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==0.13.1
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+requests==2.9.1
+requests-oauthlib==0.7.0
+scipy==0.13.0b1
+selenium==3.0.2
+simplejson==3.8.1
 six==1.10.0
-sumy==0.6.0
-Unidecode==0.4.20
-Werkzeug==0.12.1
+soundcloud==0.5.0
+stevedore==1.21.0
+tweepy==3.5.0
+vboxapi==1.0
+virtualenv==15.0.3
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
+Werkzeug==0.10.4
+wrapt==1.10.8
+xattr==0.6.4
+zope.interface==4.1.1
