--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+beautifulsoup4==4.6.0
 breadability==0.1.20
 chardet==3.0.2
 click==6.7
@@ -15,6 +16,5 @@ packaging==16.8
 pyparsing==2.2.0
 requests==2.13.0
 six==1.10.0
-sumy==0.6.0
 Unidecode==0.4.20
 Werkzeug==0.12.1
